test/pointers_test/fail/maybe_null_must_be_pointer.cpp
#include "marcpawl/pointers/ptr.hpp"

auto fail()
{
    // Compile time failure expected
    // Must be pointer
    return marcpawl::pointers::maybe_null<int>(5);
}
